--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -148,6 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Højre">
 <!ENTITY Ctr_html5warning	"HTML5 fuldskærm-advarsel">
 <!ENTITY Ctr_oldtoplevimg	"Standard billed-udseende på hvid baggrund">
+<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
 <!ENTITY Ctr_altalertbox	"'Alert-boks': alternativt udseende">
 <!ENTITY Ctr_emptygfavico	"Erstat generisk favicon">
 <!ENTITY Ctr_mstatusbar		"Flytbare statuspanel">
@@ -189,6 +190,8 @@
 <!ENTITY Ctr_ctrosearchdel	"forsinkelse">
 <!ENTITY Ctr_search_oit		"Åbn søgning i nyt faneblad">
 <!ENTITY Ctr_osearch_meoit	"Mellemklik: søg i nyt 'forgrundsfaneblad'">
+<!ENTITY Ctr_osearch_meoit1	"Search engine">
+<!ENTITY Ctr_osearch_meoit2	"Search glass">
 <!ENTITY Ctr_osearch_iwidth	"Automatisk justering af pop-op-bredde">
 <!ENTITY Ctr_osearch_cwidth	"Brugerdefineret bredde for søge-pop-op'er">
 <!ENTITY Ctr_osearch_dm		"Lille rullegardinsmenu-pil">
