--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -148,6 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Destra">
 <!ENTITY Ctr_html5warning	"Avviso per HTML5 a tutto schermo">
 <!ENTITY Ctr_oldtoplevimg	"Sfondo bianco classico per la visualizzazione degli URL immagine">
+<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
 <!ENTITY Ctr_altalertbox	"Avvisi di notifiche: aspetto alternativo">
 <!ENTITY Ctr_emptygfavico	"Sostituisci la favicon generica">
 <!ENTITY Ctr_mstatusbar		"Barra di stato mobile">
@@ -189,6 +190,8 @@
 <!ENTITY Ctr_ctrosearchdel	"Ritardo esecuzione in ms">
 <!ENTITY Ctr_search_oit		"Apri la ricerca in una nuova scheda">
 <!ENTITY Ctr_osearch_meoit	"Clic sul tasto centrale: ricerca in una nuova scheda attiva">
+<!ENTITY Ctr_osearch_meoit1	"Search engine">
+<!ENTITY Ctr_osearch_meoit2	"Search glass">
 <!ENTITY Ctr_osearch_iwidth	"Regola automaticamente la larghezza del menu a discesa">
 <!ENTITY Ctr_osearch_cwidth	"Larghezza personalizzata per i risultati di ricerca">
 <!ENTITY Ctr_osearch_dm		"Freccia verso il basso piccola">
