--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -148,6 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"右">
 <!ENTITY Ctr_html5warning	"HTML5 フルスクリーン警告を表示する">
 <!ENTITY Ctr_oldtoplevimg	"トップレベルドメインイメージ: 古い外観で置き換える">
+<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
 <!ENTITY Ctr_altalertbox	"ダイアログ: 替わりの外観で置き換える">
 <!ENTITY Ctr_emptygfavico	"空ファビコンを置き換える">
 <!ENTITY Ctr_mstatusbar		"ステータスバーパネルを移動可能にする">
@@ -189,6 +190,8 @@
 <!ENTITY Ctr_ctrosearchdel	"検索後も保持する">
 <!ENTITY Ctr_search_oit		"検索結果を新しいタブで開く">
 <!ENTITY Ctr_osearch_meoit	"中クリック: 検索結果を新しい新しいタブで開く">
+<!ENTITY Ctr_osearch_meoit1	"Search engine">
+<!ENTITY Ctr_osearch_meoit2	"Search glass">
 <!ENTITY Ctr_osearch_iwidth	"ポップアップの幅を合わせる">
 <!ENTITY Ctr_osearch_cwidth	"ポップアップの幅を指定する">
 <!ENTITY Ctr_osearch_dm		"小さなドロップマーカー">
