--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -148,6 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Direita">
 <!ENTITY Ctr_html5warning	"Aviso de tela cheia HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Aparência de imagem clássica em fundo branco">
+<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
 <!ENTITY Ctr_altalertbox	"'Caixa de alerta': aparência alternativa">
 <!ENTITY Ctr_emptygfavico	"Substituir favicon genérico">
 <!ENTITY Ctr_mstatusbar		"Painel da barra de status móvel">
@@ -189,6 +190,8 @@
 <!ENTITY Ctr_ctrosearchdel	"atraso">
 <!ENTITY Ctr_search_oit		"Abrir pesquisa em nova aba">
 <!ENTITY Ctr_osearch_meoit	"Clique do meio: pesquisar em nova 'aba em primeiro plano'">
+<!ENTITY Ctr_osearch_meoit1	"Search engine">
+<!ENTITY Ctr_osearch_meoit2	"Search glass">
 <!ENTITY Ctr_osearch_iwidth	"Automaticamente ajustar largura do popup">
 <!ENTITY Ctr_osearch_cwidth	"Largura personalizada para popups de pesquisa">
 <!ENTITY Ctr_osearch_dm		"Marcador pequeno">
