--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -148,6 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"右側">
 <!ENTITY Ctr_html5warning	"HTML5 全螢幕警告">
 <!ENTITY Ctr_oldtoplevimg	"「頂層網域」圖示: 經典外觀">
+<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
 <!ENTITY Ctr_altalertbox	"「警示方塊」: 換個外觀">
 <!ENTITY Ctr_emptygfavico	"〈原網站未提供圖示時〉所使用的替代書籤圖示">
 <!ENTITY Ctr_mstatusbar		"使狀態列可移動">
@@ -189,6 +190,8 @@
 <!ENTITY Ctr_ctrosearchdel	"延時">
 <!ENTITY Ctr_search_oit		"於新分頁開啟搜尋結果">
 <!ENTITY Ctr_osearch_meoit	"中鍵點擊: 於前景新分頁開啟搜尋結果">
+<!ENTITY Ctr_osearch_meoit1	"Search engine">
+<!ENTITY Ctr_osearch_meoit2	"Search glass">
 <!ENTITY Ctr_osearch_iwidth	"自動調整搜尋建議框的寬度">
 <!ENTITY Ctr_osearch_cwidth	"自訂搜尋建議框的寬度">
 <!ENTITY Ctr_osearch_dm		"縮小下拉式三角按鈕">
