--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -148,6 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Vpravo">
 <!ENTITY Ctr_html5warning	"Varování HTML5 při full screenu">
 <!ENTITY Ctr_oldtoplevimg	"Top level domain obrázků: klasický vzhled">
+<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
 <!ENTITY Ctr_altalertbox	"Okno s upozorněním: alternativní vzhled">
 <!ENTITY Ctr_emptygfavico	"Nahradit původní faviconu">
 <!ENTITY Ctr_mstatusbar		"Přesunutelný stavový řádek">
@@ -189,6 +190,8 @@
 <!ENTITY Ctr_ctrosearchdel	"prodleva">
 <!ENTITY Ctr_search_oit		"Otevřít vyhledávání v novém panelu">
 <!ENTITY Ctr_osearch_meoit	"Klik kolečkem myši: prohledávat nové panely 'na pozadí'">
+<!ENTITY Ctr_osearch_meoit1	"Search engine">
+<!ENTITY Ctr_osearch_meoit2	"Search glass">
 <!ENTITY Ctr_osearch_iwidth	"Automatická šířka popup okna">
 <!ENTITY Ctr_osearch_cwidth	"Nastavitelná šířka pro vyhledávání">
 <!ENTITY Ctr_osearch_dm		"Malá rozevírací šipka">
