--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -148,6 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Po prawej">
 <!ENTITY Ctr_html5warning	"Ostrzeżenie o pełnym ekranie HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Klasyczny wygląd obrazu na białym tle">
+<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
 <!ENTITY Ctr_altalertbox	"'Pole powiadomień': alternatywny wygląd">
 <!ENTITY Ctr_emptygfavico	"Zamień standardową ikonę ulubionych">
 <!ENTITY Ctr_mstatusbar		"Ruchomy panel paska statusu">
@@ -189,6 +190,8 @@
 <!ENTITY Ctr_ctrosearchdel	"opóźnienia">
 <!ENTITY Ctr_search_oit		"Otwórz wyszukiwanie w nowej karcie">
 <!ENTITY Ctr_osearch_meoit	"Kliknięcie środkowym przyciskiem: otwórz wyszukiwanie w nowej 'karcie pierwszoplanowej'">
+<!ENTITY Ctr_osearch_meoit1	"Search engine">
+<!ENTITY Ctr_osearch_meoit2	"Search glass">
 <!ENTITY Ctr_osearch_iwidth	"Automatycznie dostosuj szerokość menu podręcznego">
 <!ENTITY Ctr_osearch_cwidth	"Niestandardowa szerokość menu podręcznego wyszukiwania">
 <!ENTITY Ctr_osearch_dm		"Mały przycisk podręczny">
