--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Destra">
 <!ENTITY Ctr_html5warning	"Avviso per HTML5 a tutto schermo">
 <!ENTITY Ctr_oldtoplevimg	"Sfondo bianco classico per la visualizzazione degli URL immagine">
-<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
+<!ENTITY Ctr_altdlprogbar	"Aspetto alternativo della barra di avanzamento del download">
 <!ENTITY Ctr_altalertbox	"Avvisi di notifiche: aspetto alternativo">
 <!ENTITY Ctr_emptygfavico	"Sostituisci la favicon generica">
 <!ENTITY Ctr_mstatusbar		"Barra di stato mobile">
@@ -190,8 +190,8 @@
 <!ENTITY Ctr_ctrosearchdel	"Ritardo esecuzione in ms">
 <!ENTITY Ctr_search_oit		"Apri la ricerca in una nuova scheda">
 <!ENTITY Ctr_osearch_meoit	"Clic sul tasto centrale: ricerca in una nuova scheda attiva">
-<!ENTITY Ctr_osearch_meoit1	"Search engine">
-<!ENTITY Ctr_osearch_meoit2	"Search glass">
+<!ENTITY Ctr_osearch_meoit1	"Motore di ricerca">
+<!ENTITY Ctr_osearch_meoit2	"Lente di ricerca">
 <!ENTITY Ctr_osearch_iwidth	"Regola automaticamente la larghezza del menu a discesa">
 <!ENTITY Ctr_osearch_cwidth	"Larghezza personalizzata per i risultati di ricerca">
 <!ENTITY Ctr_osearch_dm		"Freccia verso il basso piccola">
@@ -424,8 +424,8 @@
 <!ENTITY Ctr_support_forum1	"MozillaZine (forum inglese)">
 <!ENTITY Ctr_support_forum2	"Camp Firefox (forum tedesco)">
 <!ENTITY Ctr_github_issues	"Segnala un problema su Github">
-<!ENTITY Ctr_newversion		"Latest CTR version">
-<!ENTITY Ctr_newversion2	"Latest CTR beta">
+<!ENTITY Ctr_newversion		"Ultima versione di CTR">
+<!ENTITY Ctr_newversion2	"Ultima beta di CTR">
 
 <!ENTITY Ctr_addon-bar.accesskey		"B">
 <!ENTITY appMenuGettingStarted.label	"Primi passi">
