Translation update for pt-BR

--- a/xpi/locale/pt-BR/options.dtd
+++ b/xpi/locale/pt-BR/options.dtd
@@ -5,7 +5,7 @@
 
 <!ENTITY Ctr_title			"Classic Theme Restorer">
 
-<!ENTITY Ctr_addonbar		"Barra de complementos">
+<!ENTITY Ctr_addonbar		"Barra de extensões">
 <!ENTITY Ctr_statusbar		"Barra de status">
 <!ENTITY Ctr_flexspace		"Espaço flexível">
 <!ENTITY Ctr_space			"Espaço">
@@ -48,7 +48,7 @@
 <!ENTITY Ctr_tabsontop1		"Abas no topo - definida [tabsontop=true]">
 <!ENTITY Ctr_tabsontop2		"Abas embaixo (v1) - definida [tabsontop=false]">
 <!ENTITY Ctr_tabsontop3		"Abas embaixo (v2) - definida [tabsontop=false]">
-<!ENTITY Ctr_tabsontopW1	"v2 é somente para alguns complementos e temas completos!">
+<!ENTITY Ctr_tabsontopW1	"v2 é somente para algumas extensões e temas completos!">
 <!ENTITY Ctr_tabsontopI1	"Adicionar atributos [tabsontop=true/false] para">
 <!ENTITY Ctr_tabsintitlebar	"Barra de título do &brandShortName;">
 <!ENTITY Ctr_tabwidthdef	"(padrão)">
@@ -86,7 +86,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Algumas variações de aba não são compatíveis com o complemento 'Hide caption titlebar plus'.">
 <!ENTITY Ctr_hctpinfoab		"O botão na barra de título não é compatível com o complemento 'Hide caption titlebar plus'.">
-<!ENTITY Ctr_tobainfotab	"O complemento 'Tabs on bottom' não é compatível com '&Ctr_title;' e deve ser desativado. Em vez disso, use as configurações '&Ctr_cuitabsnontop;' disponíveis!">
+<!ENTITY Ctr_tobainfotab	"A extensão 'Tabs on bottom' não é compatível com '&Ctr_title;' e deve ser desativado. Em vez disso, use as configurações '&Ctr_cuitabsnontop;' disponíveis!">
 
 <!ENTITY Ctr_appbutton		"Botão do aplicativo">
 <!ENTITY Ctr_appbutton0		"Botão desativado">
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Direita">
 <!ENTITY Ctr_html5warning	"Aviso de tela cheia HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Aparência de imagem clássica em fundo branco">
-<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
+<!ENTITY Ctr_altdlprogbar	"Aparência alternativa da barra de progresso de download">
 <!ENTITY Ctr_altalertbox	"'Caixa de alerta': aparência alternativa">
 <!ENTITY Ctr_emptygfavico	"Substituir favicon genérico">
 <!ENTITY Ctr_mstatusbar		"Painel da barra de status móvel">
@@ -184,29 +184,29 @@
 <!ENTITY Ctr_nosnippets		"Página inicial (about:home): ocultar snippets">
 <!ENTITY Ctr_search_ui		"Pesquisa">
 <!ENTITY Ctr_ctroldsearch	"Pesquisa antiga">
-<!ENTITY Ctr_ctroldsearchd	"Não compatível com outros complementos de pesquisa!">
+<!ENTITY Ctr_ctroldsearchd	"Não compatível com outras extensões de pesquisa!">
 <!ENTITY Ctr_ctroldsearchc	"Limpar caixa de pesquisa após pesquisar">
 <!ENTITY Ctr_ctroldsearchr	"Reverter para primeiro mecanismo de busca na lista após pesquisar">
 <!ENTITY Ctr_ctrosearchdel	"atraso">
 <!ENTITY Ctr_search_oit		"Abrir pesquisa em nova aba">
 <!ENTITY Ctr_osearch_meoit	"Clique do meio: pesquisar em nova 'aba em primeiro plano'">
-<!ENTITY Ctr_osearch_meoit1	"Search engine">
-<!ENTITY Ctr_osearch_meoit2	"Search glass">
+<!ENTITY Ctr_osearch_meoit1	"Mecanismo de pesquisa">
+<!ENTITY Ctr_osearch_meoit2	"Efeito glass na pesquisa">
 <!ENTITY Ctr_osearch_iwidth	"Automaticamente ajustar largura do popup">
 <!ENTITY Ctr_osearch_cwidth	"Largura personalizada para popups de pesquisa">
 <!ENTITY Ctr_osearch_dm		"Marcador pequeno">
-<!ENTITY Ctr_addonmanager	"Gerenciador de complementos">
+<!ENTITY Ctr_addonmanager	"Gerenciador de extensões">
 <!ENTITY Ctr_alt_addonsp	"Página 'Mais informações': ordem alternativa">
 <!ENTITY Ctr_am_showrecup	"Sempre exibir categoria 'Atualizações recentes'">
 <!ENTITY Ctr_alt_addonsm	"Aparência alternativa">
-<!ENTITY Ctr_am_nowarning	"Lista de complementos: ocultar avisos">
-<!ENTITY Ctr_am_compact		"Lista de complementos: visualização compacta">
+<!ENTITY Ctr_am_nowarning	"Lista de extensões: ocultar avisos">
+<!ENTITY Ctr_am_compact		"Lista de extensões: visualização compacta">
 <!ENTITY Ctr_am_compact2	"Visualização compacta +">
-<!ENTITY Ctr_am_highlight	"Lista de complementos: destacar entrada ao passar com o cursor">
-<!ENTITY Ctr_am_buticons	"Lista de complementos: substituir rótulos de botões com ícones">
-<!ENTITY Ctr_am_hovshowb	"Lista de complementos: somente exibir botões ao passar com o cursor">
-<!ENTITY Ctr_addonversion	"Lista de complementos: exibir versão do complemento">
-<!ENTITY Ctr_xpinstallui	"Janela de instalação de complementos antiga">
+<!ENTITY Ctr_am_highlight	"Lista de extensões: destacar entrada ao passar com o cursor">
+<!ENTITY Ctr_am_buticons	"Lista de extensões: substituir rótulos de botões com ícones">
+<!ENTITY Ctr_am_hovshowb	"Lista de extensões: somente exibir botões ao passar com o cursor">
+<!ENTITY Ctr_addonversion	"Lista de extensões: exibir versão do complemento">
+<!ENTITY Ctr_xpinstallui	"Janela de instalação de extensões antiga">
 <!ENTITY Ctr_bmbutton		"Botão do menu de favoritos">
 <!ENTITY Ctr_hiderecentbm	"Popup de favoritos: ocultar favoritos adicionados recentemente">
 <!ENTITY Ctr_hideeditbm		"Estrela de favoritos: ocultar popup (se a página não está nos favoritos)">
@@ -359,8 +359,8 @@
 <!ENTITY Ctr_nobookbarbg	"Barra de favoritos: remover a cor do fundo">
 <!ENTITY Ctr_bookbarfs		"Barra de favoritos: no modo de tela cheia">
 <!ENTITY Ctr_nonavbarbg		"Barra de navegação: remover a cor do fundo">
-<!ENTITY Ctr_nonavbarbg1	"Estas barras de ferramentas adicionais de complementos e outras barras de ferramentas localizadas no topo são afetadas.">
-<!ENTITY Ctr_nonavbarbg2	"Todas as barras de ferramentas em 'Beyond australis' no slim chrome dos complementos, são afetadas.">
+<!ENTITY Ctr_nonavbarbg1	"Estas barras de ferramentas adicionais de extensões e outras barras de ferramentas localizadas no topo são afetadas.">
+<!ENTITY Ctr_nonavbarbg2	"Todas as barras de ferramentas em 'Beyond australis' no slim chrome das extensões, são afetadas.">
 <!ENTITY Ctr_nonavborder	"Barra de favoritos: adicionar borda no topo da barra">
 <!ENTITY Ctr_nonavtbborder	"Barras superiores: remover bordas da barra">
 <!ENTITY Ctr_toptb_oldpad	"Barras de ferramentas superiores: antigo preenchimento esquerdo e direito">
