--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Desno">
 <!ENTITY Ctr_html5warning	"Celozaslonsko opozorilo HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Slike 'vrhnje domene': klasični videz">
-<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
+<!ENTITY Ctr_altdlprogbar	"Nadomestni videz vrstice napredka prenosov">
 <!ENTITY Ctr_altalertbox	"'Okno opozorila': nadomestni videz">
 <!ENTITY Ctr_emptygfavico	"Nadomesti splošno zaznamko">
 <!ENTITY Ctr_mstatusbar		"Premakljivo podokno stanja">
@@ -190,8 +190,8 @@
 <!ENTITY Ctr_ctrosearchdel	"zakasnitev">
 <!ENTITY Ctr_search_oit		"Odpri iskanje v novem zavihku">
 <!ENTITY Ctr_osearch_meoit	"Srednji kliki: išči v novem 'zavihku v ospredju'">
-<!ENTITY Ctr_osearch_meoit1	"Search engine">
-<!ENTITY Ctr_osearch_meoit2	"Search glass">
+<!ENTITY Ctr_osearch_meoit1	"Iskalnik">
+<!ENTITY Ctr_osearch_meoit2	"Iskalno steklo">
 <!ENTITY Ctr_osearch_iwidth	"Samodejno prilagodi širino pojavnega okna">
 <!ENTITY Ctr_osearch_cwidth	"Širina po meri pojavnih oken za iskanje">
 <!ENTITY Ctr_osearch_dm		"Majhna spustna puščica">
@@ -404,7 +404,7 @@
 <!ENTITY Ctr_e_findbarhl	"Poudarjanje iskalne vrstice">
 <!ENTITY Ctr_fx50findbarhl	"Odznačitev teh nastavitev odstrani možnosti 'poudarjanja' iskalne vrstice.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
+<!ENTITY Ctr_e_oldfontgfx	"Stari izris pisav">
 
 
 <!ENTITY Ctr_pw_settings	"Nastavitve">
