--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -159,7 +159,7 @@
 <!ENTITY Ctr_combrelstop	"Ustavi in Ponovno naloži: združi gumba v orodni vrstici">
 <!ENTITY Ctr_stoprel1		"Pomembno: gumb Ponovno naloži vstavite za gumb Ustavi!">
 <!ENTITY Ctr_panelmenucol	"Ploščasti meniji: nadomestna barva ozadja">
-<!ENTITY Ctr_hideprivmask	"Zasebno brskanje: skrij kazalnik maskiranja">
+<!ENTITY Ctr_hideprivmask	"Zasebno brskanje: skrij kazalnik maske">
 <!ENTITY Ctr_navsmallicons	"Majhne ikone">
 <!ENTITY Ctr_navlargeicons	"Velike ikone">
 <!ENTITY Ctr_nbisizedelay0	"Zakasnitev izvajanja v ms">
@@ -419,7 +419,7 @@
 <!ENTITY Ctr_special_font	"Nastavitve barve ozadja so samo za privzeto temo!">
 <!ENTITY Ctr_special_info	"Nekatere možnosti v vseh primerih morda ne bodo povzročile vidnih sprememb">
 <!ENTITY Ctr_special_info2	"Nastavitve so narejene za &brandShortName;ovo privzeto temo in morda ne bodo delovale z vsemi temami tretjih oseb!">
-<!ENTITY Ctr_special_acr	"Težave prijavite samo preko uradnih kanalov za podporo in ne z uporabo dodatka 'Add-on Compatibility Reporter'!">
+<!ENTITY Ctr_special_acr	"Težave prijavljajte samo preko uradnih kanalov za podporo in ne z uporabo dodatka 'Add-on Compatibility Reporter'!">
 <!ENTITY Ctr_support		"Podpora">
 <!ENTITY Ctr_support_forum1	"MozillaZine (angleški forum)">
 <!ENTITY Ctr_support_forum2	"Camp Firefox (nemški forum)">
