--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Højre">
 <!ENTITY Ctr_html5warning	"HTML5 fuldskærm-advarsel">
 <!ENTITY Ctr_oldtoplevimg	"Standard billed-udseende på hvid baggrund">
-<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
+<!ENTITY Ctr_altdlprogbar	"Download progress bar: alternative appearance">
 <!ENTITY Ctr_altalertbox	"'Alert-boks': alternativt udseende">
 <!ENTITY Ctr_emptygfavico	"Erstat generisk favicon">
 <!ENTITY Ctr_mstatusbar		"Flytbare statuspanel">
