--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Trennlinie rechts">
 <!ENTITY Ctr_html5warning	"HTML5-Vollbildwarnung">
 <!ENTITY Ctr_oldtoplevimg	"Klassische 'Bilddarstellung' auf weißem Hintergrund">
-<!ENTITY Ctr_altdlprogbar	"Alternative Darstellung für die Downloadprogressleiste">
+<!ENTITY Ctr_altdlprogbar	"Downloadprogressleiste: alternative Darstellung">
 <!ENTITY Ctr_altalertbox	"Benachrichtigungs-Box: alternative Darstellung">
 <!ENTITY Ctr_emptygfavico	"Allgemeines Lesezeichensymbol ersetzen">
 <!ENTITY Ctr_mstatusbar		"Statusbereich: sichtbar und verschiebbar">
