--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Δεξιά">
 <!ENTITY Ctr_html5warning	"Προειδοποίηση πλήρους οθόνης HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Εικόνες τομέα «ανώτατου επιπέδου»: κλασική εμφάνιση">
-<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
+<!ENTITY Ctr_altdlprogbar	"Download progress bar: alternative appearance">
 <!ENTITY Ctr_altalertbox	"«Πλαίσιο ειδοποίησης»: εναλλακτική εμφάνιση">
 <!ENTITY Ctr_emptygfavico	"Αντικατάσταση εικονιδίου γενικής χρήσης">
 <!ENTITY Ctr_mstatusbar		"Μετακινήσιμο πινακίδιο γραμμής κατάστασης">
