--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Derecha">
 <!ENTITY Ctr_html5warning	"Advertencia de pantalla completa de contenidos HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Vista de imagen: Apariencia clásica sobre fondo blanco">
-<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
+<!ENTITY Ctr_altdlprogbar	"Apariencia alternativa para la barra de progreso de descargas">
 <!ENTITY Ctr_altalertbox	"'Recuadro de alerta': Apariencia alternativa">
 <!ENTITY Ctr_emptygfavico	"Reemplazar favicon genérico">
 <!ENTITY Ctr_mstatusbar		"Mostrar panel móvil del contenedor de la antigua barra de estado">
@@ -189,9 +189,9 @@
 <!ENTITY Ctr_ctroldsearchr	"Volver al primer motor de búsqueda de la lista después de buscar">
 <!ENTITY Ctr_ctrosearchdel	"de retardo">
 <!ENTITY Ctr_search_oit		"Abrir búsqueda en una nueva pestaña">
-<!ENTITY Ctr_osearch_meoit	"Clic central: Realiza la búsqueda en una nueva 'pestaña en primer plano'">
-<!ENTITY Ctr_osearch_meoit1	"Search engine">
-<!ENTITY Ctr_osearch_meoit2	"Search glass">
+<!ENTITY Ctr_osearch_meoit	"Abrir búsqueda en una nueva pestaña -en primer plano- al hacer clic medio sobre">
+<!ENTITY Ctr_osearch_meoit1	"Motor de búsqueda">
+<!ENTITY Ctr_osearch_meoit2	"Lupa">
 <!ENTITY Ctr_osearch_iwidth	"Ajustar automáticamente la anchura del menú emergente">
 <!ENTITY Ctr_osearch_cwidth	"Anchura personalizada para menús emergentes de búsqueda">
 <!ENTITY Ctr_osearch_dm		"Flecha de despliegue pequeña">
