--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Naprawo">
 <!ENTITY Ctr_html5warning	"Warnowanje połneje wobrazowki HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Klasiski zwonkowny napohlad na běłym pozadku">
-<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
+<!ENTITY Ctr_altdlprogbar	"Postupowa lajsta sćehnjenja: alternatiwny napohlad">
 <!ENTITY Ctr_altalertbox	"'Warnowanski kašćik': Alternatiwny zwonkowny napohlad">
 <!ENTITY Ctr_emptygfavico	"Powšitkowny faworitowy symbol wuměnić">
 <!ENTITY Ctr_mstatusbar		"Přesuwajomny wobłuk statusoweje lajsty">
@@ -189,9 +189,9 @@
 <!ENTITY Ctr_ctroldsearchr	"Po pytanju so k prěnjej pytawje w lisćinje wróćić">
 <!ENTITY Ctr_ctrosearchdel	"komdźenje">
 <!ENTITY Ctr_search_oit		"Pytanje w nowym rajtarku wočinić">
-<!ENTITY Ctr_osearch_meoit	"Srjedźne kliknjenja: W nowym 'prědkowym rajtarku' pytać">
-<!ENTITY Ctr_osearch_meoit1	"Search engine">
-<!ENTITY Ctr_osearch_meoit2	"Search glass">
+<!ENTITY Ctr_osearch_meoit	"Srjedźne kliknjenje: Pytanje w nowym 'prědkowym rajtarku' wočinić">
+<!ENTITY Ctr_osearch_meoit1	"Pytawa">
+<!ENTITY Ctr_osearch_meoit2	"Pytanska lupa">
 <!ENTITY Ctr_osearch_iwidth	"Šěrokosć wuskakowaceho wokna přiměrić">
 <!ENTITY Ctr_osearch_cwidth	"Swójska šěrokosć za pytanske wuskakowace wokna">
 <!ENTITY Ctr_osearch_dm		"Małe wuběranske tłóčatko">
