--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"右">
 <!ENTITY Ctr_html5warning	"HTML5 全屏警告">
 <!ENTITY Ctr_oldtoplevimg	"“顶级域名”图片: 经典外观">
-<!ENTITY Ctr_altdlprogbar	"Alternative appearance for download progress bar">
+<!ENTITY Ctr_altdlprogbar	"Download progress bar: alternative appearance">
 <!ENTITY Ctr_altalertbox	"“提示框”: 备选的外观">
 <!ENTITY Ctr_emptygfavico	"替换通用网站图标">
 <!ENTITY Ctr_mstatusbar		"使状态栏面板可以移动">
