--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Po prawej">
 <!ENTITY Ctr_html5warning	"Ostrzeżenie o pełnym ekranie HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Klasyczny wygląd obrazu na białym tle">
-<!ENTITY Ctr_altdlprogbar	"Alternatywny wygląd paska postępu pobierania">
+<!ENTITY Ctr_altdlprogbar	"Pasek postępu pobierania: alternatywny wygląd">
 <!ENTITY Ctr_altalertbox	"'Pole powiadomień': alternatywny wygląd">
 <!ENTITY Ctr_emptygfavico	"Zamień standardową ikonę ulubionych">
 <!ENTITY Ctr_mstatusbar		"Ruchomy panel paska statusu">
