--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"右">
 <!ENTITY Ctr_html5warning	"HTML5 全屏警告">
 <!ENTITY Ctr_oldtoplevimg	"“顶级域名”图片: 经典外观">
-<!ENTITY Ctr_altdlprogbar	"Download progress bar: alternative appearance">
+<!ENTITY Ctr_altdlprogbar	"下载进度条: 备选的外观">
 <!ENTITY Ctr_altalertbox	"“提示框”: 备选的外观">
 <!ENTITY Ctr_emptygfavico	"替换通用网站图标">
 <!ENTITY Ctr_mstatusbar		"使状态栏面板可以移动">
@@ -190,8 +190,8 @@
 <!ENTITY Ctr_ctrosearchdel	"延迟">
 <!ENTITY Ctr_search_oit		"在新标签页中搜索">
 <!ENTITY Ctr_osearch_meoit	"中键点击: 在新的“前台标签页”中搜索">
-<!ENTITY Ctr_osearch_meoit1	"Search engine">
-<!ENTITY Ctr_osearch_meoit2	"Search glass">
+<!ENTITY Ctr_osearch_meoit1	"搜索引擎">
+<!ENTITY Ctr_osearch_meoit2	"搜索放大镜">
 <!ENTITY Ctr_osearch_iwidth	"自动调整弹出框宽度">
 <!ENTITY Ctr_osearch_cwidth	"自定义搜索弹出框宽度">
 <!ENTITY Ctr_osearch_dm		"较小的下拉按钮">
