--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -148,7 +148,7 @@
 <!ENTITY Ctr_puibut_r_sep	"Δεξιά">
 <!ENTITY Ctr_html5warning	"Προειδοποίηση πλήρους οθόνης HTML5">
 <!ENTITY Ctr_oldtoplevimg	"Εικόνες τομέα «ανώτατου επιπέδου»: κλασική εμφάνιση">
-<!ENTITY Ctr_altdlprogbar	"Download progress bar: alternative appearance">
+<!ENTITY Ctr_altdlprogbar	"Γραμμή προόδου λήψεων: εναλλακτική εμφάνιση">
 <!ENTITY Ctr_altalertbox	"«Πλαίσιο ειδοποίησης»: εναλλακτική εμφάνιση">
 <!ENTITY Ctr_emptygfavico	"Αντικατάσταση εικονιδίου γενικής χρήσης">
 <!ENTITY Ctr_mstatusbar		"Μετακινήσιμο πινακίδιο γραμμής κατάστασης">
@@ -189,9 +189,9 @@
 <!ENTITY Ctr_ctroldsearchr	"Επαναφορά στην πρώτη μηχανή αναζήτησης στη λίστα μετά την αναζήτηση">
 <!ENTITY Ctr_ctrosearchdel	"καθυστέρηση">
 <!ENTITY Ctr_search_oit		"Άνοιγμα αναζήτησης σε νέα καρτέλα">
-<!ENTITY Ctr_osearch_meoit	"Μεσαίο κλικ: αναζήτηση σε νέα καρτέλα στο προσκήνιο">
-<!ENTITY Ctr_osearch_meoit1	"Search engine">
-<!ENTITY Ctr_osearch_meoit2	"Search glass">
+<!ENTITY Ctr_osearch_meoit	"Μεσαίο κλικ: άνοιγμα αναζήτησης σε νέα καρτέλα στο προσκήνιο">
+<!ENTITY Ctr_osearch_meoit1	"Εικονίδιο μηχανής αναζήτησης">
+<!ENTITY Ctr_osearch_meoit2	"Κουμπί αναζήτησης (φακός)">
 <!ENTITY Ctr_osearch_iwidth	"Αυτόματη ρύθμιση εύρους αναδυόμενου">
 <!ENTITY Ctr_osearch_cwidth	"Προσαρμοσμένο εύρος για αναδυόμενα αναζήτησης">
 <!ENTITY Ctr_osearch_dm		"Μικρός δείκτης ανάπτυξης">
