--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"'Download gestartet und beendet'-Animation">
 <!ENTITY Ctr_fsanimation	"'Vollbild-Animationen'">
 <!ENTITY Ctr_fsaduration	"'Vollbild-Animationen' für HTML5-Inhalte">
+<!ENTITY Ctr_findbarhl		"Suchleiste für Seiteninhalte: animierete Suchergebnishervorhebung">
 
 <!ENTITY Ctr_toolsitem		"Eintrag im Menü 'Extras'">
 <!ENTITY Ctr_appmenuitem	"Eintrag im Einstellungsuntermenü der &brandShortName;-Schaltfläche">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Audio-Abspiel-Symbol">
 <!ENTITY Ctr_e_containertab	"'Tab in Umgebung' / 'Kontainer-Tabs'">
-<!ENTITY Ctr_e_findbarhl	"Seitensuchhervorhebung">
-<!ENTITY Ctr_fx50findbarhl	"Das Deaktivieren dieser Optionen entfernt die 'Seitensuchhervorhebung'.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Schutz vor dem Hinterlassen 'digitaler Fingerabdrücke'">
 <!ENTITY Ctr_e_oldfontgfx	"Alte Schriftdarstellung">
 
 
