--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Icona animata di avviso download">
 <!ENTITY Ctr_fsanimation	"Icona animata all’attivazione della modalità 'A tutto schermo'">
 <!ENTITY Ctr_fsaduration	"Icona animata per la modalità 'A tutto schermo' degli elementi HTML5">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Aggiungi collegamento nel menu Strumenti">
 <!ENTITY Ctr_appmenuitem	"Aggiungi collegamento nel menu del Pulsante &brandShortName;">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icone altoparlanti nelle schede">
 <!ENTITY Ctr_e_containertab	"Schede container">
-<!ENTITY Ctr_e_findbarhl	"Evidenziamento della barra per la ricerca nel testo">
-<!ENTITY Ctr_fx50findbarhl	"Deselezionando queste preferenze vengono rimosse le caratteristiche di evidenziamento della barra per la ricerca nel testo.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Rendering classico dei caratteri">
 
 
