--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Animace 'upozornění stahování'">
 <!ENTITY Ctr_fsanimation	"Animace ve fullscreenu">
 <!ENTITY Ctr_fsaduration	"Animace ve fullscreenu pro obsah HTML5">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Položka v nabídce Nástroje">
 <!ENTITY Ctr_appmenuitem	"Položka v nabídce tlačítka aplikace">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Ikona audio na panelech">
 <!ENTITY Ctr_e_containertab	"Container Tabs">
-<!ENTITY Ctr_e_findbarhl	"Zvýraznění okna vyhledávání">
-<!ENTITY Ctr_fx50findbarhl	"Nezatržení předvolby odstraní zvýraznění vyhledávání.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Starý způsob renderování písma">
 
 
