--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Animation ved 'Filhentning notifikation'">
 <!ENTITY Ctr_fsanimation	"Fuldskærmsanimationer">
 <!ENTITY Ctr_fsaduration	"Fuldskærmsanimationer for HTML5-indhold">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Menupunkt i værktøjslinje">
 <!ENTITY Ctr_appmenuitem	"Menupunkt i programknappermenu">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Lydafspilningsikon på faneblade">
 <!ENTITY Ctr_e_containertab	"Indeholdende faneblade">
-<!ENTITY Ctr_e_findbarhl	"Findlinje fremhævning">
-<!ENTITY Ctr_fx50findbarhl	"Deaktivér disse indstillinger for at fjerne findlinjens 'fremhæv'-funktioner.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
 
 
