--- a/xpi/locale/dsb/options.dtd
+++ b/xpi/locale/dsb/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Animacija za 'ześěgnjeńske zdźělenje'">
 <!ENTITY Ctr_fsanimation	"Animacije na połnej wobrazowce">
 <!ENTITY Ctr_fsaduration	"Animacije na połnej wobrazowce za wopśimjeśe HTML5">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Menijowy zapisk w meniju Rědy">
 <!ENTITY Ctr_appmenuitem	"Menijowy zapisk w meniju nałožeńskich tłocaškow">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowótgrawanje">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rejtarki">
-<!ENTITY Ctr_e_findbarhl	"Wuzwignjenje pytańskego póla">
-<!ENTITY Ctr_fx50findbarhl	"Gaž se toś te nastajenja znjemóžniju, se nowe 'wuzwignjeńske' funkcije wótpóraju.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Kreslenje starych pismow">
 
 
