--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Κινησιομοίωση ειδοποίησης λήψης">
 <!ENTITY Ctr_fsanimation	"Κινησιομοίωση πλήρους οθόνης">
 <!ENTITY Ctr_fsaduration	"Κινησιομοίωση πλήρους οθόνης για περιεχόμενο HTML5">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Στοιχείο μενού στο μενού «Εργαλεία»">
 <!ENTITY Ctr_appmenuitem	"Στοιχείο μενού στο μενού του κουμπιού εφαρμογής">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Εικονίδιο αναπαραγωγής ήχου σε καρτέλες">
 <!ENTITY Ctr_e_containertab	"Καρτέλeς περιεκτών">
-<!ENTITY Ctr_e_findbarhl	"Επισημάνσεις γραμμής εύρεσης">
-<!ENTITY Ctr_fx50findbarhl	"Αποεπιλέγοντας αυτή την προτίμηση απομακρύνονται οι νέες δυνατότητες επισήμανσης της γραμμής εύρεσης.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Παλιά απόδοση γραμματοσειρών">
 
 
