--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"'Allalaadimise teavituse' animatsioon">
 <!ENTITY Ctr_fsanimation	"Täisekraani animatsioonid">
 <!ENTITY Ctr_fsaduration	"HTML5-sisu animatsioonid täisekraani režiimis">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Menüükirje tööriistade menüüs">
 <!ENTITY Ctr_appmenuitem	"Menüükirje &brandShortName;i nupu menüüs">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Heli esitamise ikoon kaartidel">
 <!ENTITY Ctr_e_containertab	"Konteinerkaardid">
-<!ENTITY Ctr_e_findbarhl	"Leidmisribal esiletõstmine">
-<!ENTITY Ctr_fx50findbarhl	"Nendelt eelistustelt märke eemaldamine keelab leidmisribal esiletõstmise võimalused.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Old font rendering">
 
 
