--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Animation du bouton « Téléchargement » lorsqu'un téléchargement s'achève">
 <!ENTITY Ctr_fsanimation	"Animations de transition vers/depuis le mode plein écran">
 <!ENTITY Ctr_fsaduration	"Animations de transition vers/depuis le mode plein écran pour le contenu HTML5">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Ajouter un élément dans le menu « Outils »">
 <!ENTITY Ctr_appmenuitem	"Ajouter un élément dans le menu de l'ancien bouton &brandShortName;">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Icône de lecture audio">
 <!ENTITY Ctr_e_containertab	"Onglets conteneurs">
-<!ENTITY Ctr_e_findbarhl	"Surlignage avancé de la barre de recherche">
-<!ENTITY Ctr_fx50findbarhl	"Décocher ces paramètres désactive les nouvelles fonctionnalités de surlignage avancées de la barre de recherche.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Ancien rendu des polices">
 
 
