--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Animacija za 'sćehnjenske zdźělenje'">
 <!ENTITY Ctr_fsanimation	"Animacije na połnej wobrazowce">
 <!ENTITY Ctr_fsaduration	"Animacije na połnej wobrazowce za wobsah HTML5">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Menijowy zapisk w meniju Nastroje">
 <!ENTITY Ctr_appmenuitem	"Menijowy zapisk w meniju nałoženskich tłóčatkow">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Symbol za awdiowothrawanje">
 <!ENTITY Ctr_e_containertab	"Kontejnerowe rajtarki">
-<!ENTITY Ctr_e_findbarhl	"Wuzběhnjenje pytanskeho pola">
-<!ENTITY Ctr_fx50findbarhl	"Hdyž so tute nastajenja znjemóžnja, so nowe 'wuzběhnjenske' funkcije wotstronja.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Rysowanje starych pismow">
 
 
