--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"ダウンロード通知をアニメーションする">
 <!ENTITY Ctr_fsanimation	"フルスクリーンアニメーション">
 <!ENTITY Ctr_fsaduration	"HTML5コンテンツのフルスクリーンアニメーション">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"ツールメニューに表示する">
 <!ENTITY Ctr_appmenuitem	"&brandShortName; メニューに表示する">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"タブのサウンド再生アイコン">
 <!ENTITY Ctr_e_containertab	"コンテナタブ">
-<!ENTITY Ctr_e_findbarhl	"検索バーハイライト">
-<!ENTITY Ctr_fx50findbarhl	"この設定をオフにすると、検索バーのハイライト機能を無効にします。">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"古いフォントレンダリング">
 
 
