--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Animacja 'powiadomienia pobierania'">
 <!ENTITY Ctr_fsanimation	"Animacje pełnoekranowe">
 <!ENTITY Ctr_fsaduration	"Animacje pełnoekranowe treści HTML5">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Element w menu narzędzi">
 <!ENTITY Ctr_appmenuitem	"Element w menu przycisków aplikacji">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Ikona odtwarzania dźwięku">
 <!ENTITY Ctr_e_containertab	"Karty z kontekstem">
-<!ENTITY Ctr_e_findbarhl	"Podświetlanie paska wyszukiwania">
-<!ENTITY Ctr_fx50findbarhl	"Odznaczenie tych ustawień usuwa nowe funkcje 'podświetlania' paska wyszukiwania.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Stare renderowanie czcionek">
 
 
