--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Анимация «Загрузка завершена»">
 <!ENTITY Ctr_fsanimation	"Полноэкранная анимация">
 <!ENTITY Ctr_fsaduration	"Полноэкранная анимация для HTML5 контента">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Пункт в меню инструментов">
 <!ENTITY Ctr_appmenuitem	"Пункт в меню кнопки приложения">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Значок воспроизведения аудио на вкладках">
 <!ENTITY Ctr_e_containertab	"Контейнер вкладок">
-<!ENTITY Ctr_e_findbarhl	"Подсветка панели поиска">
-<!ENTITY Ctr_fx50findbarhl	"Отключение параметра убирает функцию «подсветки» панели поиска.">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Старый рендеринг шрифтов">
 
 
