--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Animacija 'obvestila o prenosih'">
 <!ENTITY Ctr_fsanimation	"Celozaslonske animacije">
 <!ENTITY Ctr_fsaduration	"Celozaslonske animacije za vsebino HTML5">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Predmet menija v meniju Orodja">
 <!ENTITY Ctr_appmenuitem	"Predmet menija v meniju programskega gumba">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"Ikona predvajanja zvoka na zavihkih">
 <!ENTITY Ctr_e_containertab	"Zavihki vsebnika">
-<!ENTITY Ctr_e_findbarhl	"Poudarjanje iskalne vrstice">
-<!ENTITY Ctr_fx50findbarhl	"Odznačitev teh nastavitev odstrani možnosti 'poudarjanja' iskalne vrstice.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Stari izris pisav">
 
 
