--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Анімація «Повідомлення завантаження»">
 <!ENTITY Ctr_fsanimation	"Повноекранні анімації">
 <!ENTITY Ctr_fsaduration	"Повноекранні анімації для HTML5 вмісту">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"Пункт в меню інструментів">
 <!ENTITY Ctr_appmenuitem	"Пункт меню в кнопках додатку">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Кишеня">
 <!ENTITY Ctr_e_tabsaudioico	"Іконка аудіовідтворення на вкладках">
 <!ENTITY Ctr_e_containertab	"Контейнерні вкладки">
-<!ENTITY Ctr_e_findbarhl	"Підсвічування в пошуковій панелі">
-<!ENTITY Ctr_fx50findbarhl	"Вимкнення цього параметру усуває «підсвічувальні» особливості пошукової панелі.">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"Надання старого шрифту">
 
 
