--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"“下载提醒”动画">
 <!ENTITY Ctr_fsanimation	"全屏动画">
 <!ENTITY Ctr_fsaduration	"HTML5 内容使用全屏动画">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"在工具菜单中显示菜单项">
 <!ENTITY Ctr_appmenuitem	"在 &brandShortName; 按钮菜单中显示菜单项">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"标签页上显示正在播放音频图标">
 <!ENTITY Ctr_e_containertab	"容器标签页">
-<!ENTITY Ctr_e_findbarhl	"搜索栏高亮">
-<!ENTITY Ctr_fx50findbarhl	"不选中此项以移除搜索栏“高亮”功能。">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"旧式字体渲染">
 
 
