--- a/xpi/locale/zh-TW/options.dtd
+++ b/xpi/locale/zh-TW/options.dtd
@@ -381,6 +381,7 @@
 <!ENTITY Ctr_dlanimation	"「下載通知」動畫">
 <!ENTITY Ctr_fsanimation	"全螢幕模式動畫">
 <!ENTITY Ctr_fsaduration	"HTML5 內容的全螢幕模式動畫">
+<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
 
 <!ENTITY Ctr_toolsitem		"工具選單中顯示 Classic Theme Restorer 項目">
 <!ENTITY Ctr_appmenuitem	"火狐橙選單中顯示 Classic Theme Restorer 項目">
@@ -401,9 +402,8 @@
 <!ENTITY Ctr_e_pocket		"Pocket">
 <!ENTITY Ctr_e_tabsaudioico	"分頁靜音按鈕">
 <!ENTITY Ctr_e_containertab	"容器分頁">
-<!ENTITY Ctr_e_findbarhl	"尋找列著色強調">
-<!ENTITY Ctr_fx50findbarhl	"取消勾選這個核取方塊，則可移除尋找列「著色強調」功能。">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
+<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
 <!ENTITY Ctr_e_oldfontgfx	"傳統字型渲染">
 
 
