Updates to the Slovenian translation

--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -381,7 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Animacija 'obvestila o prenosih'">
 <!ENTITY Ctr_fsanimation	"Celozaslonske animacije">
 <!ENTITY Ctr_fsaduration	"Celozaslonske animacije za vsebino HTML5">
-<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
+<!ENTITY Ctr_findbarhl		"Iskalna vrstica: animiraj poudaranje rezultatov">
 
 <!ENTITY Ctr_toolsitem		"Predmet menija v meniju Orodja">
 <!ENTITY Ctr_appmenuitem	"Predmet menija v meniju programskega gumba">
@@ -403,7 +403,7 @@
 <!ENTITY Ctr_e_tabsaudioico	"Ikona predvajanja zvoka na zavihkih">
 <!ENTITY Ctr_e_containertab	"Zavihki vsebnika">
 <!ENTITY Ctr_e_flyweb		"Flyweb">
-<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
+<!ENTITY Ctr_e_resfprinting "Zaščita proti prstnim odtisom">
 <!ENTITY Ctr_e_oldfontgfx	"Stari izris pisav">
 
 
