--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -381,7 +381,7 @@
 <!ENTITY Ctr_dlanimation	"Animacja 'powiadomienia pobierania'">
 <!ENTITY Ctr_fsanimation	"Animacje pełnoekranowe">
 <!ENTITY Ctr_fsaduration	"Animacje pełnoekranowe treści HTML5">
-<!ENTITY Ctr_findbarhl		"Findbar: animate result highlighting">
+<!ENTITY Ctr_findbarhl		"Pasek wyszukiwania: animuj podświetlanie wyników">
 
 <!ENTITY Ctr_toolsitem		"Element w menu narzędzi">
 <!ENTITY Ctr_appmenuitem	"Element w menu przycisków aplikacji">
@@ -403,7 +403,7 @@
 <!ENTITY Ctr_e_tabsaudioico	"Ikona odtwarzania dźwięku">
 <!ENTITY Ctr_e_containertab	"Karty z kontekstem">
 <!ENTITY Ctr_e_flyweb		"FlyWeb">
-<!ENTITY Ctr_e_resfprinting "Anti fingerprinting protection">
+<!ENTITY Ctr_e_resfprinting "Ochrona przed pozyskiwaniem 'odcisku palca'">
 <!ENTITY Ctr_e_oldfontgfx	"Stare renderowanie czcionek">
 
 
